--- a/index.html
+++ b/index.html
@@ -9,21 +9,14 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
 </head>
 <body id="grad1">
-	
-	<div class="icons">
-		<a href="https://www.facebook.com/andre.morais1998" class="facebook"><i class="fab fa-facebook-f"></i>facebook</a>
-		<a href="https://twitter.com/AndreMorais98" class="twitter"><i class="fab fa-twitter"></i>twitter</a>
-		<a href="https://github.com/Demorales1998" class="github"><i class="fab fa-github"></i>github</a>
-		<a href="https://www.linkedin.com/in/andr%C3%A9-morais-0814081b0/" class="linkedin"><i class="fab fa-linkedin-in"></i>linkedin</a>
-		<a href="mailto:andre_morais98@hotmail.com" class="email"><i class="far fa-envelope"></i>email</a>
-	</div>
+
 
 	<div id="mySidebar" class="sidebar">
   		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-  		<a href="index.html"><i class="fa fa-fw fa-user"></i>About me</a>
-		<a href="qualifications.html"><i class="fa fa-book" aria-hidden="true"></i>    Qualifications</a>
-		<a href="interests.html"><i class="fa fa-film" aria-hidden="true"></i>    Interests</a>
-		<a href="playlist.html"><i class="fa fa-music" aria-hidden="true"></i>  Playlist</a>
+		<a href="index.html"><i class="fas fa-home"></i>Home</a>
+		<a href="tuberculosis.html"><i class="fas fa-bacterium" aria-hidden="true"></i>    Mycobacterium tuberculosis</a>
+		<a href="aureus.html"><i class="fas fa-bacterium" aria-hidden="true"></i>    Staphylococcus aureus</a>
+		
 		
 	</div>
 
@@ -43,36 +36,6 @@
 	}
 	</script>
 
-	<ul class="tilesWrap">
-	<li>
-		<h2>01</h2>
-		<h3>Course</h3>
-		<p>-Master's Degree Student on Computer Engineering</p>
-	</li>
-	<li>
-		<h2>02</h2>
-		<h3>Languages</h3>
-		<p>-Portuguese: Native Language</p>
-		<p>-English: got KET certificate</p>
-		<p>-Spanish: got one year of intensive spanish</p>
-	</li>
-	<li>
-		<h2>03</h2>
-		<h3>Sports</h3>
-		<p>-Played footbal for 6 years</p>
-		<p>-I've been working out at the gym </p>
-	</li>
-	<li>
-		<h2>04</h2>
-		<h3>Programming Languages</h3>
-		<p>Here are some that I've worked with:</p>
-		<p>·C</p>
-		<p>·Java</p>
-		<p>·Python</p>
-		<p>·Haskell</p>
-	</li>
-	</ul>
-	
-	
+	<h1>Disciplina: Laboratórios para Bioinformática</h1>
 </body>
 </html>
