--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
 	}
 	</script>
 
-	<h1>Disciplina: Laboratórios para Bioinformática</h1>
+	<h1 class="centro">Disciplina: Laboratórios para Bioinformática</h1>
 </body>
 </html>
