--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="stylesheets/style.css">
 	<link rel="stylesheet" href="stylesheets/w3.css">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
-	<script src="https://kit.fontawesome.com/042850ffd1.js" crossorigin="anonymous"></script>">
+	<script src="https://kit.fontawesome.com/042850ffd1.js" crossorigin="anonymous"></script>
 	
 </head>
 <body id="grad1">
@@ -20,12 +20,12 @@
 		
 		
 	</div>
-	<h1 style="text-align:center">Disciplina: Laboratórios para Bioinformática</h1>
+	
 	
 	<div id="main">
  		<button class="openbtn" onclick="openNav()">☰ </button>  
 	</div>
-
+	<h1 style="text-align:center">Disciplina: Laboratórios para Bioinformática</h1>
 	<script>
 	function openNav() {
   		document.getElementById("mySidebar").style.width = "250px";
