--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 	<div id="mySidebar" class="sidebar">
   		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-		<a href="index.html"><i class="fas fa-home"></i>Home</a>
-		<a href="tuberculosis.html"><i class="fas fa-bacterium" aria-hidden="true"></i>    Mycobacterium tuberculosis</a>
-		<a href="aureus.html"><i class="fas fa-bacterium" aria-hidden="true"></i>    Staphylococcus aureus</a>
+		<a style="font-size:50px" href="index.html"><i class="fas fa-home"></i>Home</a>
+		<a style="font-size:50px" href="tuberculosis.html"><i class="fas fa-bacterium" aria-hidden="true"></i>    Mycobacterium tuberculosis</a>
+		<a style="font-size:50px" href="aureus.html"><i class="fas fa-bacterium" aria-hidden="true"></i>    Staphylococcus aureus</a>
 		
 		
 	</div>
