--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 	<div id="mySidebar" class="sidebar">
   		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-		<a style="font-size:50px" href="index.html"><i class="fas fa-home"></i>Home</a>
-		<a style="font-size:50px" href="tuberculosis.html"><i class="fas fa-bacterium" aria-hidden="true"></i>    Mycobacterium tuberculosis</a>
-		<a style="font-size:50px" href="aureus.html"><i class="fas fa-bacterium" aria-hidden="true"></i>    Staphylococcus aureus</a>
+		<a href="index.html"><i class="fas fa-home"></i>Home</a>
+		<a href="tuberculosis.html"><i class="fas fa-bacterium" aria-hidden="true"></i>    Mycobacterium tuberculosis</a>
+		<a href="aureus.html"><i class="fas fa-bacterium" aria-hidden="true"></i>    Staphylococcus aureus</a>
 		
 		
 	</div>
@@ -28,8 +28,8 @@
 	<h1 style="text-align:center">Disciplina: Laboratórios para Bioinformática</h1>
 	<script>
 	function openNav() {
-  		document.getElementById("mySidebar").style.width = "250px";
-  		document.getElementById("main").style.marginLeft = "250px";
+  		document.getElementById("mySidebar").style.width = "350px";
+  		document.getElementById("main").style.marginLeft = "350px";
 	}
 
 	function closeNav() {
