--- a/index.html
+++ b/index.html
@@ -64,21 +64,16 @@ body, html {
 <div class="w3-container" style="padding:128px 16px" id="tuber">
   <h3 class="w3-center w3-xxlarge">Mycobacterium tuberculosis</h3>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
-    <div class="w3-quarter">
+    <div class="w3-third">
       <b class="w3-xlarge">Características da bactéria</b>
       <p>As bactérias do género Mycobacterium são bacilos (pleomórficos) gram positivo retos ou encurvados, cocobacilos, filamentosos ou formas ramificadas. Este organismo tem um comprimento de aproximadamente 1 a 10 μm, uma largura entre 0.2 e 0.6 μm e não formam esporo, flagelo ou cápsula. Apresenta uma parede complexa quanto à sua composição química, Lipídios de natureza hidrofóbica para a parede e ainda Bacilos Álcool Ácidos Resistentes (BAAR). Estas bactérias são intracelulares que infetam e proliferam-se no interior de macrófagos e linfócitos.</p>
     </div>
-    <div class="w3-quarter">
+    <div class="w3-third">
       <b class="w3-xlarge">Tuberculose</b>
       <p>A Tuberculose é a responsável pela morte de mais de 1 bilião de pessoas nos últimos 200 anos, esta doença cronica infeciosa é provocada pela bactéria Mycobacterium tuberculosis. Esta bactéria propaga-se pelo ar, quando uma pessoa infetada tosse, espirra, fala ou expele saliva podendo ser inalada por outro individuo. O sucesso da infeção e do desenvolvimento de tuberculose depende da sucessão de 4 passos: a fagocitose do bacilo, a multiplicação multicelular, o período de latência da infeção e da infeção ativa do pulmão.<br>
         Atualmente a Tuberculose continua a ser responsável pelo maior número de mortes provocadas por um único agente infecioso, causando cerca de 10,4 milhões de novos casos e 1,7 milhão de mortes por ano. O controlo da Tuberculose é dificultado pelo facto de depender amplamente de uma técnica de diagnostico microscópica com 120 anos com baixa sensibilidade, de uma vacina com 100 anos com eficácia limitada e medicamentos com 40 e 60 anos. </p>
     </div>
-    <div class="w3-quarter">
-      <b class="w3-xlarge">Sintomas</b>
-      <p>Os sintomas da tuberculose estão principalmente relacionados com o desenvolvimento da bactéria nos pulmões, podendo haver tosse seca e persistente com ou sem sangue, perda de peso, dor no peito ao tossir e dificuldade respiratória.<br>
-        No entanto, quando a bactéria desenvolve-se em outros órgãos, é possível que surjam outros sintomas como cansaço excessivo, suor noturno, febre e inchaço no local em que a bactéria está instalada.</p>
-    </div>
-    <div class="w3-quarter">
+    <div class="w3-third">
       <b class="w3-xlarge">Ciclo de vida da bactéria</b>
       <p>A resposta imunológica para a Mycobacterium tuberculosis não é completamente eficaz. Esta leva a bactéria para um estado latente, mas raramente a elimina. Infelizmente o estado latente da Mycobacterium tuberculosis é reversível, e a reativação da tuberculose é a fonte da maioria das transmissões. A infeção da tuberculose acontece em 4 etapas: A resposta inicial dos macrófagos, a etapa de crescimento, a etapa de controlo imunológico e a etapa do abcesso pulmonar. Estas quatro etapas ocorrem em cerca de 1 mês.</p>
     </div>
