--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@ body, html {
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <h3 class="w3-center w3-xxlarge"> Staphylococcus aureus</h3>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
-    <div class="w3-third">
+    <div class="w3-second">
       <b class="w3-xlarge">Doenças Associadas</b>
       <p>Os seres humanos são um reservatório natural de S. aureus e estima-se que cerca de 30% a 50% da população adulta saudável se encontra infetada, entre os quais 10% a 20% são infetados de forma persistente. Estas pessoas apresentam um risco mais elevado de infeções subsequentes.</p>
       <p>Por ser um agente patogénico oportunista, esta bactéria constitui uma das principais causas de doenças nosocomiais como: bacteremia-sepse, endocardite, pneumonia, osteomielite, artrite e doenças de pele. São transmitidas pelo contacto direto com uma pessoa infetada, pela utilização de um objeto contaminado ou pela inalação de pequenas gotículas infetadas dispersas ao espirrar ou tossir.</p>
       <p>O tratamento de infeções causadas por S. aureus é um desafio hospitalar devido à resistência adquirida rapidamente pelo organismo à maioria dos antibióticos. Uma forma de prevenção é a desinfeção/lavagem adequada das mãos.</p>
     </div>
-    <div class="w3-third">
+    <div class="w3-second">
       <b class="w3-xlarge">Ciclo de vida da bactéria</b>
       <p>Uma caraterística curiosa destas bactérias é que são resistentes a ciclos de congelação/descongelação e sobrevivem durante períodos alargados de tempo em alimentos armazenados a temperaturas inferiores a –20ºC. S. aureus tem a capacidade de crescer em ambientes com temperaturas entre 7 e 46°C e tem uma temperatura ótima de crescimento entre 35 e 37°C. A produção de enterotoxina ocorre a temperaturas entre 10 e 45°C. A bactéria em si é destruída pela pasteurização, mas as enterotoxinas já formadas são resistentes aos processos térmicos, incluindo os regimes utilizados para esterilizar enlatados de baixa-acidez.</p>
     </div>
