--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@ body, html {
   </div>
 </div>
 
-<div class="w3-container" style="padding:128px 16px" id="aureus">
+<div class="w3-container" w3-light-grey "style="padding:128px 16px" id="aureus">
   <h3 class="w3-center w3-xxlarge"> Staphylococcus aureus</h3>
   <div class="w3-row-padding w3-center" style="margin-top:64px;display: flex;flex-direction: column;align-items: center;">
     <div class="w3-col l6 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="images/genoma_aureus.png" alt="genoma_aureus" style="width:100%">
+        <img src="Captura de ecrã 2021-12-25 100728.jpg" alt="genoma_aureus" style="width:100%">
       </div>
     </div>
     <div class="w3-col l4 m9" style="width: 80%;">
