--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@ body, html {
       </div>
     </div>
     <div class="w3-col l4 m9" style="width: 80%;">
-      <b class="w3-xlarge">Características da bactéria</b>
-      <p> Recentemente descobriu-se um representante da epidemia de S. aureus resistente à meticilina, o clone EMRSA-16 (MRSA252), clinicamente importante; e um representante de um clone de S. aureus suscetível à meticilina adquirido pela comunidade invasiva (MSSA476). As sequências de genoma de MRSA252 e MSSA476 têm uma estrutura bem conservada na região central, mas diferem marcadamente nos seus elementos genéticos acessórios. MRSA252 é a cepa de S. aureus geneticamente diversa sequenciada até ao momento: 6% do genoma é novo em comparação com outros genomas publicados e contém vários elementos genéticos únicos. MSSA476 é suscetível à meticilina, como foi dito anteriormente, mas contém um novo elemento semelhante a mec do cassete estafilocócico cromossômico (SCC) (designado SCC476), que está integrado no mesmo local do cromossoma, como elementos SCCmec em cepas de MRSA, mas codifica uma proteína de resistência ao ácido fusídico putativa.  O papel crucial que os elementos acessórios desempenham na rápida evolução do S. aureus é claramente ilustrado comparando o genoma MSSA476 com o de uma cepa adquirida na comunidade de MRSA, extremamente relacionada; a distribuição diferencial de grandes elementos móveis com determinantes de virulência e resistência aos medicamentos pode ser responsável pelas diferenças fenotípicas clinicamente importantes nessas cepas. </p>    
+      <p> adsafdgfhfdgfsad </p>    
     </div>
   </div>
 </div>
