--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ body, html {
 </div>
 
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="aureus">
-  <h3 class="w3-center w3-xxlarge"> Staphylococcus aureus</h3>
+  <h3 class="w3-center w3-xxlarge"> Staphylococcus aureus- IleS</h3>
   <div class="w3-row-padding w3-center" style="margin-top:64px;display: flex;flex-direction: column;align-items: center;">
     <div class="w3-col l6 m6 w3-margin-bottom">
       <div class="w3-card">
