--- a/index.html
+++ b/index.html
@@ -116,19 +116,18 @@ body, html {
 </div>
 
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="aureus">
-  <h3 class="w3-center w3-xxlarge"> Staphylococcus aureus- IleS</h3>
-  <div class="w3-row-padding w3-center" style="margin-top:64px;display: flex;flex-direction: column;align-items: center;">
-    <div class="w3-col l6 m6 w3-margin-bottom">
-      <div class="w3-card">
-        <img src="Captura de ecrã 2021-12-25 100728.jpg" alt="genoma_aureus" style="width:100%">
-      </div>
+  <h3 class="w3-center w3-xxlarge"> Staphylococcus aureus </h3>
+  <div class="w3-row-padding w3-center" style="margin-top:64px">
+    <div class="w3-second">
+      <b class="w3-xlarge">IleS</b>
+      <p> A sua função biológica é catalisar a ligação da isoleucina ao tRNA (Ile)</p>
     </div>
-    <div class="w3-col l4 m9" style="width: 80%;">
-      <p> adsafdgfhfdgfsad </p>    
+      <div class="w3-second">
+      <b class="w3-xlarge">MurA</b>
+      <p>  </p>
     </div>
   </div>
 </div>
-
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
