--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@ body, html {
       <div class="w3-card">
         <img src="images/aureus_img.png" alt="aureus_img" style="width:150%">
       </div>
+      <div class="w3-card">
+        <img src="images/Tabela. aureus.png" alt="tabela" style="width:100%">
+      </div>
     </div>
     <div class="w3-col l4 m9" style="margin-left:15%">
       <p> Staphylococcus aureus (S. aureus) é uma bactéria esférica gram-positiva, da família Micrococcaceae, responsável por várias infeções locais e sistémicas em seres humanos. Estas bactérias possuem aproximadamente um diâmetro de 0,5 a 1,5 µm. A forma de cocos é representativa desta bactéria. São imóveis e não-esporuladas.</h4>
