--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body, html {
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-second">
       <b class="w3-xlarge">ileS</b>
-      <p> A sua função biológica desta protéina consiste em catalisar a ligação da isoleucina ao tRNA (Ile). IleS é um tipo de aminoácido-tRNA sintetase (AaRS) que está presente em S. aureus por meio do qual a mipirocina (MUP) mostra sua atividade antimicrobiana. Esta proteína pertence à classe I de tRNA sintetases, que são caracterizadas por uma ligação de ATP. O seu mecanismo de ação envolve interferir com a síntese de proteínas bacterianas por meio da inibição irreversível e competitiva de IleS. A inibição de IleS leva à acumulação da isoleucil-tRNA não carregado responsável pela síntese de pentafosfato de guanosina de alarmona. A resposta rigorosa da alarmona restringe a síntese de RNA. 
+      <p> A função biológica desta protéina consiste em catalisar a ligação da isoleucina ao tRNA (Ile). IleS é um tipo de aminoácido-tRNA sintetase (AaRS) que está presente em S. aureus por meio do qual a mipirocina (MUP) mostra sua atividade antimicrobiana. Esta proteína pertence à classe I de tRNA sintetases, que são caracterizadas por uma ligação de ATP. O seu mecanismo de ação envolve interferir com a síntese de proteínas bacterianas por meio da inibição irreversível e competitiva de IleS. A inibição de IleS leva à acumulação da isoleucil-tRNA não carregado responsável pela síntese de pentafosfato de guanosina de alarmona. A resposta rigorosa da alarmona restringe a síntese de RNA. 
 Devido ao uso continuo de antibióticos ao longo dos anos, S. aureus adquiriu resistência contra MUP devido à mutação da proteína isoleucil-tRNA sintetase (IleS).  </p>
     </div>
       <div class="w3-second">
