--- a/index.html
+++ b/index.html
@@ -104,12 +104,7 @@ body, html {
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-bottom" style="margin-left:10%">
       <div class="w3-card">
-        <img src="images/aureus_img.png" alt="aureus_img" style="width:150%">
-      </div>
-     </div>
-     <div class="w3-col l3 m6 w3-margin-bottom" style="margin-left:10%">
-      <div class="w3-card">
-        <img src="images/Tabela. aureus.png" alt="tabela" style="width:100%">
+        <img src="images/aureus_e_tabela.png" alt="aureus_img" style="width:150%">
       </div>
     </div>
     <div class="w3-col l4 m9" style="margin-left:15%">
