--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body, html {
 <div class="w3-container" style="padding:128px 16px" id="aureus">
   <h3 class="w3-center w3-xxlarge"> Staphylococcus aureus</h3>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
-    <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:10%">
+    <div class="w3-col l5 m6 w3-margin-bottom">
       <div class="w3-card">
         <img src="images/aureus_e_tabela.png" alt="aureus_img" style="width:100%">
       </div>
