--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@ body, html {
        <img src="images/aureus_e_tabela.png" alt="aureus_img" style="width:100%">
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%">
-      <p> Staphylococcus aureus (S. aureus) é uma bactéria esférica gram-positiva, da família Micrococcaceae, responsável por várias infeções locais e sistémicas em seres humanos. Estas bactérias possuem aproximadamente um diâmetro de 0,5 a 1,5 µm e são caraterizadas pela forma de cocos, falta de mobilidade e serem não-esporuladas.</h4> 
-      <p> Os seres humanos são um reservatório natural de S. aureus e estima-se que cerca de 30% a 50% da população adulta saudável se encontra infetada, entre os quais 10% a 20% são infetados de forma persistente. Estas pessoas apresentam um risco mais elevado de infeções subsequentes. </p>
-      <p> Por ser um agente patogénico oportunista, esta bactéria constituí uma das principais causas de doenças nosocomiais como: como bacteremia-sepse, endocardite, pneumonia, osteomielite, artrite e doenças de pele. </p>   
-      <p> O uso contínuo de antibióticos contra esta bactéria resulta no desenvolvimento de cepas resistentes. Atualmente, a mupirocina (MUP) é o antibiótico escolhida contra a S. aureus e MDR (resistente à meticilina). </p>
+      <p> Staphylococcus aureus (S. aureus) é uma bactéria esférica gram-positiva, da família Micrococcaceae, responsável por várias infeções locais e sistémicas em seres humanos. Estas bactérias possuem aproximadamente um diâmetro de 0,5 a 1,5 µm e são caracterizadas pela forma de cocos, falta de mobilidade e por serem não-esporuladas.</h4> 
+      <p> Os seres humanos são um reservatório natural de S. aureus e estima-se que cerca de 30% a 50% da população adulta saudável se encontre infetada, dos quais 10% a 20% são infetados de forma persistente. Estas pessoas apresentam um risco mais elevado de infeções subsequentes. </p>
+      <p> Por ser um agente patogénico oportunista, esta bactéria constituí uma das principais causas de doenças nosocomiais, tais como: bacteremia-sepse, endocardite, pneumonia, osteomielite, artrite e doenças de pele. </p>   
+      <p> O uso contínuo de antibióticos contra esta bactéria resulta no desenvolvimento de cepas resistentes. Atualmente, a mupirocina é o antibiótico usado contra a S. aureus e MDR (resistente à meticilina). </p>
     </div>
   </div>
 </div>
@@ -123,7 +123,7 @@ body, html {
 Devido ao uso continuo de antibióticos ao longo dos anos, S. aureus adquiriu resistência contra MUP devido à mutação da proteína isoleucil-tRNA sintetase (IleS).  </p>
     </div>
     <div class="w3-second">
-      <b class="w3-xlarge">murA</b>
+      <b class="w3-xlarge">mprF</b>
       <p> Esta protéina é responsável pela transferência de um grupo lisil de L-lisil-tRNA (Lys) para o fosfatidilglicerol ligado à membrana (PG), produzindo  lisilfosfatidilglicerol (LPG), um componente fundamental da membrana bacteriana com uma carga líquida positiva. A síntese do LPG contribui para a virulência da bactéria por estar envolvida no mecanismo de resistência aos peptídeos antimicrobianos catiónicos (CAMP) produzidos pelo sistema imunológico do hospedeiro e pelos microrganismos concorrentes. Mais precisamente, a modificação do fosfatidilglicerol aniónico com L-lisina carregada positivamente resulta na repulsão dos peptídeos. Desta forma, mprF mostrou afetar a resistência e suscetibilidade à moenomicina e vancomicina, resistência a defensinas humanas e eliminação de neutrófilos independentes de oxigênio e suscetibilidade à meticilina, oxacilina, bacitracina, gentamicina, beta-lactâmicos e peptídeos sintéticos, entre outros peptídeos antimicrobianos catiónicos.
       <p>  </p>
     </div>
