--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@ Devido ao uso continuo de antibióticos ao longo dos anos, S. aureus adquiriu re
     </div>
     <div class="w3-second">
       <b class="w3-xlarge">mprF</b>
+      <p> Proteína: Phosphatidylglycerol lysyltransferase
+          Gene: mprF
+          Organismo: Staphylococcus aureus
+          Localização subcelular: Membrana plasmática
       <p> Esta protéina é responsável pela transferência de um grupo lisil de L-lisil-tRNA (Lys) para o fosfatidilglicerol ligado à membrana (PG), produzindo  lisilfosfatidilglicerol (LPG), um componente fundamental da membrana bacteriana com uma carga líquida positiva. A síntese do LPG contribui para a virulência da bactéria por estar envolvida no mecanismo de resistência aos peptídeos antimicrobianos catiónicos (CAMP) produzidos pelo sistema imunológico do hospedeiro e pelos microrganismos concorrentes. Mais precisamente, a modificação do fosfatidilglicerol aniónico com L-lisina carregada positivamente resulta na repulsão dos peptídeos. Desta forma, mprF mostrou afetar a resistência e suscetibilidade à moenomicina e vancomicina, resistência a defensinas humanas e eliminação de neutrófilos independentes de oxigênio e suscetibilidade à meticilina, oxacilina, bacitracina, gentamicina, beta-lactâmicos e peptídeos sintéticos, entre outros peptídeos antimicrobianos catiónicos.
       <p>  </p>
     </div>
